--- a/.github/workflows/dev-alpine3_12.yml
+++ b/.github/workflows/dev-alpine3_12.yml
@@ -1,4 +1,4 @@
-name: dev-3_12
+name: dev-alpine3_12
 
 on:
   push:
@@ -7,14 +7,14 @@ on:
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/dev-3_12.yml'
+      - '.github/workflows/dev-alpine3_12.yml'
       - '3.12/**'
       - 'overlay/**'
       - 'tests/**'
       - 'VERSION'
 
 jobs:
-  test-3_12:
+  test-alpine3_12:
     runs-on: ubuntu-latest
     steps:
       -
@@ -31,7 +31,7 @@ jobs:
         name: Run tests
         run: |
           RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-3_12:
+  build-alpine3_12:
     runs-on: ubuntu-latest
     steps:
       -
@@ -71,9 +71,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpine-3.12-dev
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version_minor.outputs.content }}-beta
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}-beta
+            bcgdesign/alpine-s6:alpine3.12-dev
+            bcgdesign/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}-beta
+            bcgdesign/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
