--- a/.github/workflows/dev-alpine3_13.yml
+++ b/.github/workflows/dev-alpine3_13.yml
@@ -1,42 +1,54 @@
-name: main-3_13
+name: dev-alpine3_13
 
 on:
   push:
-    branches:
+    branches-ignore:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/main-3_13.yml'
+      - '.github/workflows/dev-alpine3_13.yml'
       - '3.13/**'
       - 'overlay/**'
+      - 'tests/**'
       - 'VERSION'
 
 jobs:
-  publish-3_13:
+  test-alpine3_13:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Read Alpine version - revision
-        uses: bencgreen/read-file-action@v1
+        name: Checkout shUnit2
+        uses: actions/checkout@v2
         with:
-          path: ./3.13/ALPINE_REVISION
-        id: alpine_revision
+          repository: kward/shunit2
+          ref: v2.1.8
+          path: ./shunit2
       -
-        name: Read image version
-        uses: bencgreen/read-file-action@v1
-        with:
-          path: ./VERSION
-        id: version
+        name: Run tests
+        run: |
+          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
+  build-alpine3_13:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout code
+        uses: actions/checkout@v2
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
         with:
           path: ./VERSION_MINOR
         id: version_minor
+      -
+        name: Read image version
+        uses: bencgreen/read-file-action@v1
+        with:
+          path: ./VERSION
+        id: version
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -59,13 +71,10 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:latest
-            bcgdesign/alpine-s6:${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-3.13
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
+            bcgdesign/alpine-s6:dev
+            bcgdesign/alpine-s6:alpine3.13-dev
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}-beta
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
