--- a/.github/workflows/main-alpine3_12.yml
+++ b/.github/workflows/main-alpine3_12.yml
@@ -1,42 +1,30 @@
-name: dev-3_13
+name: main-alpine3_12
 
 on:
   push:
-    branches-ignore:
+    branches:
       - 'main'
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/dev-3_13.yml'
-      - '3.13/**'
+      - '.github/workflows/main-alpine3_12.yml'
+      - '3.12/**'
       - 'overlay/**'
-      - 'tests/**'
       - 'VERSION'
 
 jobs:
-  test-3_13:
+  publish-alpine3_12:
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout code
         uses: actions/checkout@v2
       -
-        name: Checkout shUnit2
-        uses: actions/checkout@v2
+        name: Read Alpine version - revision
+        uses: bencgreen/read-file-action@v1
         with:
-          repository: kward/shunit2
-          ref: v2.1.8
-          path: ./shunit2
-      -
-        name: Run tests
-        run: |
-          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-3_13:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout code
-        uses: actions/checkout@v2
+          path: ./3.12/ALPINE_REVISION
+        id: alpine_revision
       -
         name: Read image version
         uses: bencgreen/read-file-action@v1
@@ -67,14 +55,14 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.13/Dockerfile
+          file: ./3.12/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:dev
-            bcgdesign/alpine-s6:alpine-3.13-dev
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version_minor.outputs.content }}-beta
-            bcgdesign/alpine-s6:alpine-3.13-${{ steps.version.outputs.content }}-beta
+            bcgdesign/alpine-s6:alpine3.12
+            bcgdesign/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
+            bcgdesign/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
