--- a/.github/workflows/main-alpine3_13.yml
+++ b/.github/workflows/main-alpine3_13.yml
@@ -1,4 +1,4 @@
-name: main-3_12
+name: main-alpine3_13
 
 on:
   push:
@@ -7,13 +7,13 @@ on:
     tags-ignore:
       - '**'
     paths:
-      - '.github/workflows/main-3_12.yml'
-      - '3.12/**'
+      - '.github/workflows/main-alpine3_13.yml'
+      - '3.13/**'
       - 'overlay/**'
       - 'VERSION'
 
 jobs:
-  publish-3_12:
+  publish-alpine3_13:
     runs-on: ubuntu-latest
     steps:
       -
@@ -23,7 +23,7 @@ jobs:
         name: Read Alpine version - revision
         uses: bencgreen/read-file-action@v1
         with:
-          path: ./3.12/ALPINE_REVISION
+          path: ./3.13/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
@@ -55,14 +55,17 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./3.12/Dockerfile
+          file: ./3.13/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpine-3.12
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpine-3.12-${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine-${{ steps.alpine_revision.outputs.content }}
+            bcgdesign/alpine-s6:latest
+            bcgdesign/alpine-s6:${{ steps.version_minor.outputs.content }}
+            bcgdesign/alpine-s6:${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine3.13
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}
+            bcgdesign/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}
+            bcgdesign/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
