--- a/Dockerfile-automated
+++ b/Dockerfile-automated
@@ -1,11 +1,10 @@
 FROM alpine:3.13.4
-COPY --from=build /log /log
 
-ARG TARGETPLATFORM
+ARG TARGETPLATFORM="linux/amd64"
 
 LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
     org.label-schema.name="Alpine + S6" \
-    org.label-schema.version="3.13" \
+    org.label-schema.version="auto" \
     org.label-schema.vendor="Ben Green" \
     org.label-schema.schema-version="1.0"
 
