--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -20,7 +20,7 @@ ENV \
 
 COPY ./overlay /
 
-RUN chmod +x /usr/local/bin/bcg-*
+RUN chmod +x /usr/local/bin/bf-*
 RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
