--- a/.github/workflows/dev-alpineedge.yml
+++ b/.github/workflows/dev-alpineedge.yml
@@ -34,13 +34,13 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION
         id: version
@@ -66,9 +66,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpineedge-dev
-            bcgdesign/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}-beta
-            bcgdesign/alpine-s6:alpineedge-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:alpineedge-dev
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}-beta
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
