--- a/.github/workflows/publish-alpine3_12.yml
+++ b/.github/workflows/publish-alpine3_12.yml
@@ -14,19 +14,19 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read Alpine version - revision
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./3.12/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION
         id: version
@@ -52,10 +52,10 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpine3.12
-            bcgdesign/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
-            bcgdesign/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
+            bfren/alpine-s6:alpine3.12
+            bfren/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
