--- a/.github/workflows/publish-alpineedge.yml
+++ b/.github/workflows/publish-alpineedge.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bencgreen/read-file-action@v1
+        uses: bfren/read-file-action@v1
         with:
           path: ./VERSION
         id: version
@@ -46,9 +46,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bcgdesign/alpine-s6:alpineedge
-            bcgdesign/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}
-            bcgdesign/alpine-s6:alpineedge-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpineedge
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
