--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -10,24 +10,18 @@ COPY --from=build /log /log
 
 ARG TARGETPLATFORM
 
-LABEL maintainer="Ben Green <ben@bcgdesign.com>" \
-    org.label-schema.name="Alpine + S6" \
-    org.label-schema.version="edge" \
-    org.label-schema.vendor="Ben Green" \
-    org.label-schema.schema-version="1.0"
-
 ENV \
     # set to 0 to disable additional log output
-    BCG_DEBUG=1 \
+    BF_DEBUG=1 \
     # cron log levels are from 0 (most verbose) to 8 (default)
-    BCG_CRON_LOG_LEVEL=8 \
+    BF_CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1
 
 COPY ./overlay /
 
-RUN chmod +x /usr/local/bin/bcg-*
-RUN bcg-install
+RUN chmod +x /usr/local/bin/bf-*
+RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
