--- a/3.12/Dockerfile
+++ b/3.12/Dockerfile
@@ -26,4 +26,4 @@ RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
-ENTRYPOINT [ "/bf-init" ]
+ENTRYPOINT [ "/init" ]
