--- a/.github/workflows/dev-alpine3_13.yml
+++ b/.github/workflows/dev-alpine3_13.yml
@@ -34,15 +34,15 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION_MINOR
+          file: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION
+          file: ./VERSION
         id: version
       -
         name: Set up QEMU
@@ -67,8 +67,8 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpine3.13-dev
-            bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.content }}-beta
-            bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
