--- a/.github/workflows/dev-alpine3_14.yml
+++ b/.github/workflows/dev-alpine3_14.yml
@@ -34,15 +34,15 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION_MINOR
+          file: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION
+          file: ./VERSION
         id: version
       -
         name: Set up QEMU
@@ -68,8 +68,8 @@ jobs:
           tags: |
             bfren/alpine-s6:dev
             bfren/alpine-s6:alpine3.14-dev
-            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.content }}-beta
-            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.content }}-beta
+            bfren/alpine-s6:alpine3.14-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpine3.14-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
