--- a/.github/workflows/publish-alpine3_12.yml
+++ b/.github/workflows/publish-alpine3_12.yml
@@ -14,21 +14,21 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read Alpine version - revision
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
           path: ./3.12/ALPINE_REVISION
         id: alpine_revision
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION_MINOR
+          file: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION
+          file: ./VERSION
         id: version
       -
         name: Set up QEMU
@@ -53,9 +53,9 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpine3.12
-            bfren/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.content }}
-            bfren/alpine-s6:alpine3.12-${{ steps.version.outputs.content }}
-            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.content }}
+            bfren/alpine-s6:alpine3.12-${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:alpine3.12-${{ steps.version.outputs.contents }}
+            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
