--- a/.github/workflows/publish-alpineedge.yml
+++ b/.github/workflows/publish-alpineedge.yml
@@ -14,15 +14,15 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION_MINOR
+          file: ./VERSION_MINOR
         id: version_minor
       -
         name: Read image version
-        uses: bfren/read-file-action@v1
+        uses: bfren/read-file@v1
         with:
-          path: ./VERSION
+          file: ./VERSION
         id: version
       -
         name: Set up QEMU
@@ -47,8 +47,8 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpineedge
-            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.content }}
-            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.content }}
+            bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:alpineedge-${{ steps.version.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
