--- a/.github/workflows/dev-alpine3_12.yml
+++ b/.github/workflows/dev-alpine3_12.yml
@@ -2,12 +2,6 @@ name: dev-alpine3_12
 
 on:
   push:
-    branches-ignore:
-      - 'main'
-    tags-ignore:
-      - '**'
-  pull_request:
-    types: [closed]
   workflow_dispatch:
 
 jobs:
@@ -65,7 +59,7 @@ jobs:
         with:
           context: .
           file: ./3.12/Dockerfile
-          push: true
+          push: ${{ !startsWith(github.ref, 'refs/tags/v') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpine3.12-dev
