--- a/.github/workflows/dev-alpine3_14.yml
+++ b/.github/workflows/dev-alpine3_14.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           context: .
           file: ./3.14/Dockerfile
-          push: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+          push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:dev
