--- a/.github/workflows/dev-alpineedge.yml
+++ b/.github/workflows/dev-alpineedge.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           context: .
           file: ./edge/Dockerfile
-          push: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+          push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
             bfren/alpine-s6:alpineedge-dev
