--- a/.github/workflows/dev-alpine3_15.yml
+++ b/.github/workflows/dev-alpine3_15.yml
@@ -64,6 +64,7 @@ jobs:
           push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
+            bfren/alpine-s6:dev
             bfren/alpine-s6:alpine3.15-dev
             bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}-beta
             bfren/alpine-s6:alpine3.15-${{ steps.version.outputs.contents }}-beta
