--- a/.github/workflows/publish-alpine3_15.yml
+++ b/.github/workflows/publish-alpine3_15.yml
@@ -58,6 +58,10 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
+            bfren/alpine-s6:latest
+            bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
+            bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            bfren/alpine-s6:${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine3.15
             bfren/alpine-s6:alpine3.15-${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}
