--- a/3.13/Dockerfile
+++ b/3.13/Dockerfile
@@ -10,6 +10,9 @@ COPY --from=build /log /log
 
 ARG TARGETPLATFORM
 
+ARG BF_IMAGE
+ARG BF_VERSION
+
 ENV \
     # cron log levels are from 0 (most verbose) to 8 (default)
     BF_CRON_LOG_LEVEL=8 \
