--- a/.github/workflows/dev-alpine3_16.yml
+++ b/.github/workflows/dev-alpine3_16.yml
@@ -6,6 +6,9 @@ on:
     tags-ignore: ['**']
   workflow_dispatch:
 
+env:
+  PLATFORMS: linux/amd64,linux/arm/v7,linux/arm64
+
 jobs:
   test-alpine3_16:
     runs-on: ubuntu-latest
@@ -53,6 +56,23 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
+        name: Build and export for testing
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          load: true
+          file: ./3.16/Dockerfile
+          build-args: |
+            BF_IMAGE=${{ env.REPOSITORY_NAME }}
+            BF_VERSION=${{ steps.version.outputs.contents }}
+          platforms: ${{ env.PLATFORMS }}
+          tags: |
+            bfren/alpine-s6:test
+      -
+        name: Verify image
+        run: |
+          V=./verify.sh && chmod +x ${V} && ${V} alpine3.16 ${{ env.PLATFORMS }}
+      -
         name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -68,7 +88,7 @@ jobs:
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ./3.16/Dockerfile
@@ -76,7 +96,7 @@ jobs:
             BF_IMAGE=${{ env.REPOSITORY_NAME }}
             BF_VERSION=${{ steps.version.outputs.contents }}
           push: ${{ startsWith(github.ref, 'refs/heads/') }}
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          platforms: ${{ env.PLATFORMS }}
           tags: |
             bfren/alpine-s6:dev
             bfren/alpine-s6:alpine3.16-dev
@@ -89,7 +109,3 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-      -
-        name: Verify image
-        run: |
-          V=./verify.sh && chmod +x ${V} && ${V} alpine3.16-dev
