--- a/.github/workflows/dev-alpine3_16.yml
+++ b/.github/workflows/dev-alpine3_16.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 env:
+  TEST_IMAGE: bfren/alpine-s6:test
   PLATFORMS: linux/amd64,linux/arm/v7,linux/arm64
 
 jobs:
@@ -51,10 +52,10 @@ jobs:
         id: version
       -
         name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       -
         name: Build and export for testing
         uses: docker/build-push-action@v3
@@ -66,20 +67,20 @@ jobs:
             BF_VERSION=${{ steps.version.outputs.contents }}
           platforms: ${{ env.PLATFORMS }}
           tags: |
-            bfren/alpine-s6:test
+            ${{ env.TEST_IMAGE }}
       -
         name: Verify image
         run: |
-          V=./verify.sh && chmod +x ${V} && ${V} alpine3.16 ${{ env.PLATFORMS }}
+          V=./verify.sh && chmod +x ${V} && ${V} ${{ env.TEST_IMAGE }} ${{ env.PLATFORMS }}
       -
         name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
